# homerp

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  docker-compose.yml  mise.toml  setup.sh
backend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_hierarchies.py  003_add_tags_and_faceted_search.py  004_add_billing.py  005_add_admin.py  006_add_image_content_hash.py  008_add_thumbnail_path_to_images.py  010_add_feedback.py  011_add_webhooks.py  012_add_item_check_in_out.py  013_standardize_timezone_aware_datetimes.py  014_add_user_system_profile.py  015_add_api_keys.py  016_add_gridfinity.py  017_add_collaboration.py  018_add_location_images.py  019_add_ai_usage_logs.py  020_fix_ai_usage_logs_rls_admin.py  021_add_credit_pricing.py  021_add_notification_preferences.py  022_add_credit_pricing.py  023_add_ai_model_settings.py  024_add_ai_conversation_sessions.py  024_add_app_settings.py  025_add_app_settings.py  026_add_items_fulltext_search.py  548f62a25d96_convert_specifications_dict_to_array.py  7790740d439c_add_price_to_items.py  9341fd823643_add_user_currency_and_language.py  c72da847f342_merge_specifications_and_settings_.py
backend/src/: config.py  database.py  main.py
backend/src/admin/: __init__.py  router.py  schemas.py
backend/src/ai/: models.py  prompt_templates.py  router.py  schemas.py  service.py  session_repository.py  settings_service.py  tool_executor.py  tools.py  usage_service.py
backend/src/apikeys/: __init__.py  models.py  repository.py  router.py  schemas.py  (+1 more)
backend/tests/: conftest.py  test_health.py
(+393 files in other folders)
